--- a/test/fixtures/pretty_numbers.yml
+++ b/test/fixtures/pretty_numbers.yml
@@ -1,11 +1,18 @@
-# Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
+# This model would be load to test database automatically
+one: 
+ name: 'Million'
+ abbreviation_name: 'M'
+ number_min_length: 7
+ number_max_length: 9
 
-# This model initially had no columns defined.  If you add columns to the
-# model remove the '{}' from the fixture names and add the columns immediately
-# below each fixture, per the syntax in the comments below
-#
-one: {}
-# column: value
-#
-two: {}
-#  column: value
+two: 
+ name: 'Billion'
+ abbreviation_name: 'B'
+ number_min_length: 10
+ number_max_length: 12
+
+three:
+ name: 'Trillion'
+ abbreviation_name: 'T'
+ number_min_length: 13
+ number_max_length: 15
