--- a/config/secrets.yml
+++ b/config/secrets.yml
@@ -24,5 +24,12 @@ test:
 
 # Do not keep production secrets in the repository,
 # instead read values from the environment.
+#Number prettifier is a Test App, for deployment will use same credential as development
 production:
   secret_key_base: <%= ENV["SECRET_KEY_BASE"] %>
+  twitter_client_id: 1oI75YGdWoDhAl1KCvqA76BcI
+  twitter_secret: oobWMGmYPOYpJW9Rfpo1hOTtLEsbwS60MU79zqGD8wPakJNIv7
+  google_client_id: 670468628153-ddoprpgm1vang4rh2mmshg9aht7dm84m.apps.googleusercontent.com
+  google_secret: ex0HbUpNI6oLgjxb7kB8gF1s
+  github_client_id: a3386acee67ba657a613
+  github_secret: 6413b7070656bb449a13f9c4d1ca59239ca0c870
